--- a/firedemo.ipynb
+++ b/firedemo.ipynb
@@ -143,19 +143,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming your dataframe is named wildfire_data\n",
     "\n",
+   
     "# Identify non-numeric columns\n",
     "non_numeric_columns = wildfire_data.select_dtypes(exclude=['number']).columns\n",
     "\n",
     "# Convert non-numeric columns to numeric\n",
     "wildfire_data[non_numeric_columns] = wildfire_data[non_numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
     "\n",
-    "# Now, check if there are any remaining non-numeric values\n",
+    
     "remaining_non_numeric = wildfire_data.select_dtypes(exclude=['number']).columns\n",
     "\n",
-    "# If there are still non-numeric values, you may need to handle them based on your specific requirements.\n",
-    "# For example, you can replace them with NaN or a default value.\n",
+    
+   
     "# wildfire_data[remaining_non_numeric] = wildfire_data[remaining_non_numeric].apply(pd.to_numeric, errors='coerce')\n",
     "\n",
     "# Now you can proceed with calculating the correlation matrix\n",
@@ -376,9 +376,9 @@
    "source": [
     "import requests\n",
     "\n",
-    "# Example: Use a weather API (e.g., OpenWeatherMap)\n",
+    
     "api_key = 'I_am_removing_the_key_due_to_privacy_reasons'\n",
-    "city = 'Alberta'  # You can specify the location relevant to your dataset\n",
+    "city = 'Alberta'\n",
     "\n",
     "url = f'http://api.openweathermap.org/data/2.5/weather?q={city}&appid={api_key}'\n",
     "response = requests.get(url)\n",
